# Computer-Graphics-Homework

./: .gitignore  CMakeUserPresets.json  asset_1.glb
.github/workflows/: build_cmake.yml
src/App/: CMakeLists.txt  Camera.cpp  Camera.h  Entity.h  EntityModel.cpp  EntityModel.h  IOBuffer.cpp  IOBuffer.h  InputManager.cpp  InputManager.h  Light.cpp  Light.h  OpenGLContext.cpp  OpenGLContext.h  ResourceManager.cpp  ResourceManager.h  Resources.h  SceneRenderer.cpp  SceneRenderer.h  ShaderManager.cpp  ShaderManager.h  SharedData.h  Skybox.cpp  Skybox.h  SliderGroup.cpp  SliderGroup.h  SsaoAmbientOcclusion.cpp  SsaoAmbientOcclusion.h  SsaoBlur.cpp  SsaoBlur.h  SsaoGeometryPass.cpp  SsaoGeometryPass.h  Vector3DInputWidget.cpp  Vector3DInputWidget.h  Window.cpp  Window.h  resources.qrc
src/App/Shaders/: ao.fs  ao.vs  blur.fs  diffuse.fs  diffuse.vs  fractal.fs  fractal.vs  geometry.fs  geometry.vs  phonglight.fs  phonglight.vs  skybox.fs  skybox.vs
